--- a/tech-book-club-landing-page/src/pages/index.astro
+++ b/tech-book-club-landing-page/src/pages/index.astro
@@ -1,27 +1,20 @@
 ---
 // src/pages/index.astro
 import Layout from '../layouts/Layout.astro';
-// Removed Header import
-import Hero from '../components/Hero.astro';
-import Features from '../components/Features.astro';
-import ClubInfo from '../components/ClubInfo.astro';
-import Journey from '../components/Journey.astro';
-import Membership from '../components/Membership.astro';
-import Testimonial from '../components/Testimonial.astro';
-import CallToAction from '../components/CallToAction.astro';
-import Footer from '../components/Footer.astro';
-
+import Hero from '../components/sections/Hero.astro';
+import Features from '../components/sections/Features.astro';
+import Membership from '../components/sections/Membership.astro';
+import Testimonials from '../components/sections/Testimonials.astro';
+import CallToAction from '../components/sections/CallToAction.astro';
+import Footer from '../components/sections/Footer.astro';
 ---
 
 <Layout title="Tech Book Club - Join Us">
-  {/* Removed Header component */}
   <main>
     <Hero />
     <Features />
-    <ClubInfo />
-    <Journey />
     <Membership />
-    <Testimonial />
+    <Testimonials />
     <CallToAction />
   </main>
   <Footer />
